# talk-odsl-forum-seminar-2023

./: .gitignore  Makefile  README.md  index.html  requirements.txt  talk.md
.github/workflows/: ci.yml  pages.yml
assets/: style.css
examples/: CITATION.cff
examples/compiled_packaging/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
examples/compiled_packaging/src/: basic_math.cpp  main.cpp
examples/compiled_packaging/src/rosen_cpp/: __init__.py  example.py
examples/compiled_packaging/tests/: test_example.py
examples/edit_import_path/: example.py
examples/edit_import_path/code/: utils.py
examples/edit_sys_path/: example.py
examples/simple_packaging/: .gitignore  README.md  pyproject.toml
examples/simple_packaging/tests/: test_example.py
